--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,15 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.otaviolube</groupId>
+	<groupId>com.patrickdebona</groupId>
 	<artifactId>bolao</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bolao</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+	 <maven.compiler.source>11</maven.compiler.source>
+	 <maven.compiler.target>11</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
